--- a/src/pages/TutorialPage.css
+++ b/src/pages/TutorialPage.css
@@ -9,6 +9,13 @@
   justify-content: flex-start;
 }
 
+.tutorial-rose {
+  width: 100px;
+  height: 130px;
+  margin-bottom: 0rem;
+  display: block;
+}
+
 .tutorial-content {
   display: flex;
   flex-direction: column;
@@ -28,7 +35,8 @@
   font-size: 2.8rem;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 2.8rem;
+  margin-bottom: 2.0rem;
+  margin-top: 0rem;
 }
 
 .tutorial-steps {
@@ -36,7 +44,7 @@
   color: #0E2102;
   font-size: 1.18rem;
   line-height: 1.6;
-  margin-bottom: 2.2rem;
+  margin-top: 0rem;
   text-align: center;
   padding-left: 0;
   margin-bottom: 2.8rem;
@@ -55,7 +63,7 @@
   min-height: 140px;
   border: 4px solid #682960;
   border-radius: 16px;
-  background: #f7e5f7;
+  background: #FFF5F7;
   color: #682960;
   font-family: 'DM Serif Text', serif;
   font-size: 1.25rem;
@@ -115,15 +123,6 @@
   margin-top: 1.5rem;
 }
 
-.tutorial-error {
-  color: #682960;
-  font-family: 'DM Serif Text', serif;
-  font-size: 0.5rem;
-  font-style: italic;
-  text-align: center;
-  margin-top: 0.1rem;
-  margin-bottom: 0.5rem;
-}
 
 @media (max-width: 600px) {
   .tutorial-root {
@@ -139,7 +138,7 @@
     font-size: 1.3rem;
   }
   .tutorial-steps {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding-left: 0;
   }
   .tutorial-dropzone {
